[package]
name = "femtoclaw-audit"
version = "1.0.0"
edition = "2021"
license = "Apache-2.0"
description = "FemtoClaw Observability — telemetry, logging, metrics, and audit trail"
repository = "https://github.com/femtoclaw/femtoclaw-audit.git"

[dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
tracing = "0.1"
metrics = "0.22"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true
opt-level = "z"
